app.py working locally

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,13 @@
 aiohttp
-aiosignal
 anthropic
-async-timeout
-attrs
 backoff
-certifi
-charset-normalizer
 cohere
-fake-useragent
-frozenlist
+fake_useragent
+fastapi
 google-cloud-secret-manager
-google-cloud-storage
-grpcio
-grpcio-status
-idna
-multidict
-numpy
-openai
-pandas
-playwright
-proto-plus
-protobuf
-pyarrow
-pydantic
-python-dateutil
-pytz
-PyYAML
-requests
-six
-tiktoken
-tqdm
-typing_extensions
-urllib3
-yarl
-gunicorn
 gradio
+gunicorn
+openai
+playwright
+requests
+tiktoken
