migrating to poetry

--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,6 @@ asyncio
 anthropic
 openai
 backoff
-cohere
 fastapi
 google-cloud-secret-manager
 huey
@@ -14,3 +13,4 @@ sib_api_v3_sdk
 tiktoken
 python-multipart
 python-dotenv
+gunicorn
