--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ anyio==4.4.0
     # via
     #   anthropic
     #   httpx
+    #   openai
     #   starlette
 asyncio==3.4.3
     # via -r requirements.in
@@ -46,7 +47,9 @@ cohere==5.9.2
 colorama==0.4.6
     # via tqdm
 distro==1.9.0
-    # via anthropic
+    # via
+    #   anthropic
+    #   openai
 fastapi==0.114.2
     # via -r requirements.in
 fastavro==1.9.7
@@ -82,6 +85,8 @@ grpcio==1.66.1
     #   grpcio-status
 grpcio-status==1.66.1
     # via google-api-core
+gunicorn==23.0.0
+    # via -r requirements.in
 h11==0.14.0
     # via httpcore
 httpcore==1.0.5
@@ -90,6 +95,7 @@ httpx==0.27.2
     # via
     #   anthropic
     #   cohere
+    #   openai
 httpx-sse==0.4.0
     # via cohere
 huey==2.5.1
@@ -103,7 +109,9 @@ idna==3.10
     #   requests
     #   yarl
 jiter==0.5.0
-    # via anthropic
+    # via
+    #   anthropic
+    #   openai
 jmespath==1.0.1
     # via
     #   boto3
@@ -112,8 +120,12 @@ multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
+openai==1.45.1
+    # via -r requirements.in
 packaging==24.1
-    # via huggingface-hub
+    # via
+    #   gunicorn
+    #   huggingface-hub
 parameterized==0.9.0
     # via cohere
 proto-plus==1.24.0
@@ -140,6 +152,7 @@ pydantic==2.9.1
     #   anthropic
     #   cohere
     #   fastapi
+    #   openai
 pydantic-core==2.23.3
     # via
     #   cohere
@@ -148,6 +161,10 @@ python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   sib-api-v3-sdk
+python-dotenv==1.0.1
+    # via -r requirements.in
+python-multipart==0.0.9
+    # via -r requirements.in
 pytz==2024.2
     # via -r requirements.in
 pyyaml==6.0.2
@@ -176,6 +193,7 @@ sniffio==1.3.1
     #   anthropic
     #   anyio
     #   httpx
+    #   openai
 starlette==0.38.5
     # via fastapi
 tiktoken==0.7.0
@@ -185,7 +203,9 @@ tokenizers==0.20.0
     #   anthropic
     #   cohere
 tqdm==4.66.5
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   openai
 types-requests==2.32.0.20240914
     # via cohere
 typing-extensions==4.12.2
@@ -194,9 +214,10 @@ typing-extensions==4.12.2
     #   cohere
     #   fastapi
     #   huggingface-hub
+    #   openai
     #   pydantic
     #   pydantic-core
-urllib3==2.2.3
+urllib3==1.26.15
     # via
     #   botocore
     #   requests
