cloud function activated but there is still an error on the cloud

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@
    python-multipart = "*"
    python-dotenv = "*"
    gunicorn = "*"
+   uvicorn = "^0.20.0"
 
    [build-system]
    requires = ["poetry-core>=1.0.0"]
