chore: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
 aiohttp
 asyncio
 openai
+anthropic
 backoff
 fastapi
-google-cloud-secret-manager
-huey
 pydantic
 pytz
 requests
 tiktoken
 python-multipart
 python-dotenv
-gunicorn
-uvicorn
 streamlit
 aiofiles
 aiolimiter
